--- a/preprocess_rnn.ipynb
+++ b/preprocess_rnn.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,116 +450,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[-1.56633469e+02, -1.33367889e+02, -1.39206039e+02, ...,\n",
-       "         -1.44449280e+02, -1.28173401e+02, -8.38209229e+01],\n",
-       "        [ 8.99109955e+01,  8.10478134e+01,  7.56077728e+01, ...,\n",
-       "          1.40013794e+02,  1.42508011e+02,  1.47811050e+02],\n",
-       "        [-1.12580223e+01, -1.61380520e+01, -2.28871708e+01, ...,\n",
-       "         -2.22124405e+01, -2.75480938e+01, -2.42408142e+01],\n",
-       "        ...,\n",
-       "        [-5.07146716e-01,  2.88926220e+00,  2.07513070e+00, ...,\n",
-       "          7.74147129e+00,  9.17504501e+00,  8.69198990e+00],\n",
-       "        [ 2.54116678e+00,  2.57748342e+00,  1.11375213e+00, ...,\n",
-       "         -6.90002346e+00,  4.45707369e+00,  3.92933488e+00],\n",
-       "        [ 1.27012711e+01,  9.80611420e+00,  8.47084713e+00, ...,\n",
-       "         -3.76476145e+00, -1.04964161e+01, -1.40705185e+01]],\n",
-       "\n",
-       "       [[-6.72216034e+01, -3.35364990e+01, -2.61048870e+01, ...,\n",
-       "         -2.31013382e+02, -2.31684113e+02, -2.13891205e+02],\n",
-       "        [ 1.28638245e+02,  1.32421082e+02,  1.22773026e+02, ...,\n",
-       "          1.17961601e+02,  1.15471970e+02,  1.28534760e+02],\n",
-       "        [-2.83304768e+01, -4.46343803e+01, -4.64524918e+01, ...,\n",
-       "         -5.36626935e-01, -5.11828613e+00, -1.49653988e+01],\n",
-       "        ...,\n",
-       "        [ 3.55871725e+00, -1.00241601e-01, -2.05639958e+00, ...,\n",
-       "         -2.97069454e+00, -1.05594087e+00, -2.05692172e-01],\n",
-       "        [-6.40872717e+00,  1.13983369e+00,  1.04298229e+01, ...,\n",
-       "          4.79197836e+00,  5.94341373e+00,  4.26072216e+00],\n",
-       "        [-2.91746235e+00,  5.27609587e-02,  1.39898705e+00, ...,\n",
-       "          3.20792389e+00,  3.45465422e+00,  3.98107767e+00]],\n",
-       "\n",
-       "       [[-2.26794678e+02, -2.00710617e+02, -2.05704758e+02, ...,\n",
-       "         -7.37900085e+01, -8.26095352e+01, -7.17073135e+01],\n",
-       "        [ 1.14032516e+02,  1.12748405e+02,  1.09359932e+02, ...,\n",
-       "          1.20991882e+02,  1.21320969e+02,  1.21552048e+02],\n",
-       "        [ 2.10741405e+01,  1.98597870e+01,  2.21332550e+01, ...,\n",
-       "         -5.91037674e+01, -5.47887573e+01, -5.07511139e+01],\n",
-       "        ...,\n",
-       "        [ 1.03373766e+00, -7.60047007e+00, -1.45890322e+01, ...,\n",
-       "         -1.57423019e+00, -1.38072562e+00, -3.61378527e+00],\n",
-       "        [ 1.22049055e+01,  1.12898045e+01,  1.34960804e+01, ...,\n",
-       "         -1.30815248e+01, -1.24093161e+01, -1.37056236e+01],\n",
-       "        [-1.52709055e+00,  2.93722463e+00, -2.30630445e+00, ...,\n",
-       "          1.85914683e+00,  3.13522029e+00,  7.37919807e-02]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[-1.70000183e+02, -1.31320068e+02, -8.10168839e+01, ...,\n",
-       "         -8.80521393e+01, -1.06693916e+02, -1.14060219e+02],\n",
-       "        [ 9.26835022e+01,  9.63392029e+01,  9.56425629e+01, ...,\n",
-       "          1.01912498e+02,  1.02705063e+02,  1.00454514e+02],\n",
-       "        [-2.36659966e+01, -1.58214626e+01, -8.53522301e+00, ...,\n",
-       "         -2.73268108e+01, -1.85507698e+01, -2.36209335e+01],\n",
-       "        ...,\n",
-       "        [-5.79368877e+00, -7.70529270e+00, -5.98781872e+00, ...,\n",
-       "         -3.70101500e+00, -4.96079350e+00,  2.14872837e-01],\n",
-       "        [-3.59923124e-01, -4.63543606e+00, -3.29343081e+00, ...,\n",
-       "         -3.72866917e+00, -8.44668388e+00, -1.18455534e+01],\n",
-       "        [ 4.69673538e+00,  2.51258397e+00, -4.90753460e+00, ...,\n",
-       "         -1.62664914e+00, -2.41950130e+00, -3.70535612e+00]],\n",
-       "\n",
-       "       [[-1.09255569e+02, -2.83000298e+01, -6.26651335e+00, ...,\n",
-       "         -1.57206940e+02, -4.00976143e+01,  7.00382280e+00],\n",
-       "        [ 9.88416595e+01,  9.92571564e+01,  9.12345276e+01, ...,\n",
-       "          8.12544861e+01,  8.91360931e+01,  8.20865936e+01],\n",
-       "        [-3.22401505e+01, -2.36895256e+01, -1.01102352e+01, ...,\n",
-       "         -1.35861416e+01, -2.69475765e+01, -1.78363342e+01],\n",
-       "        ...,\n",
-       "        [-1.58199680e+00, -3.12919092e+00, -3.11623287e+00, ...,\n",
-       "          2.30056953e+00, -8.75154877e+00, -6.63696957e+00],\n",
-       "        [-1.18088531e+01, -4.91172314e+00, -1.41520178e+00, ...,\n",
-       "         -6.04220009e+00, -4.19466496e+00, -7.79300928e-03],\n",
-       "        [-6.86291456e+00, -6.81465816e+00, -4.80733013e+00, ...,\n",
-       "         -5.42167091e+00, -3.58038521e+00, -3.40171337e-01]],\n",
-       "\n",
-       "       [[-8.06847763e+00,  2.18646717e+01,  2.80203571e+01, ...,\n",
-       "          6.82536173e+00, -9.83793926e+00, -3.55534515e+01],\n",
-       "        [ 7.02647247e+01,  6.13659058e+01,  4.93029137e+01, ...,\n",
-       "          5.87343597e+01,  6.23192444e+01,  6.11353226e+01],\n",
-       "        [-2.62343407e+00, -6.36701202e+00, -1.70796239e+00, ...,\n",
-       "          1.12816753e+01,  1.22034082e+01,  1.03767242e+01],\n",
-       "        ...,\n",
-       "        [ 3.28829861e+00,  1.46726584e+00, -3.35290933e+00, ...,\n",
-       "         -4.58353519e+00, -4.34823895e+00, -7.10889697e-01],\n",
-       "        [ 4.94810581e+00, -1.58299804e+00, -6.88257933e+00, ...,\n",
-       "         -2.50655603e+00,  1.46205807e+00, -1.61102617e+00],\n",
-       "        [-6.80901432e+00, -1.07672749e+01, -7.77412796e+00, ...,\n",
-       "         -4.58381557e+00, -9.28143263e-01, -2.03668046e+00]]],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sec3_mfcc"
+    "sec3_mfcc = sec3_mfcc.reshape((-1, 129, 20))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 129, 20)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# sec3_mfcc = torch.tensor(sec3_mfcc)"
+    "sec3_mfcc.shape"
    ]
   },
   {
@@ -571,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +495,7 @@
        "array([8, 8, 8, ..., 9, 9, 9])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +522,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +556,7 @@
        "10000"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +576,7 @@
        "10000"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +596,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +629,7 @@
        "10000"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +649,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +669,7 @@
        "2"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,16 +680,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20, 129)"
+       "(129, 20)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +719,7 @@
        "8000"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +739,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +759,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +779,7 @@
        "2"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,16 +790,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20, 129)"
+       "(129, 20)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +819,7 @@
        "67224"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +839,7 @@
        "85176"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +859,7 @@
        "2000"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,18 +880,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('Processed_data/RNN/data_test', 'wb') as f: \n",
     "    pickle.dump(data_test, f)"
