--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -14499,7 +14499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14526,6 +14526,8 @@
     "        out, h = self.gru(x, h)\n",
     "\n",
     "        out = self.fc(self.relu(out[:,-1]))\n",
+    "\n",
+    "        out = self.sm(out)\n",
     "\n",
     "        return out, h\n",
     "\n",
@@ -14623,7 +14625,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([6, 8, 5, 7, 7, 7, 4, 9, 4, 2, 6, 9, 9, 9, 7, 5, 3, 6, 2, 6, 3, 1, 3, 9,\n",
+      "        0, 3, 3, 7, 3, 8, 1, 6, 4, 4, 1, 9, 3, 8, 8, 9, 2, 7, 4, 2, 4, 5, 0, 0,\n",
+      "        3, 3, 1, 8, 8, 8, 7, 6, 5, 1, 9, 8, 2, 5, 0, 1, 9, 1, 0, 5, 3, 0, 6, 6,\n",
+      "        3, 0, 9, 5, 1, 8, 5, 4, 0, 1, 8, 2, 1, 9, 1, 9, 2, 1, 5, 1, 5, 9, 9, 7,\n",
+      "        6, 8, 0, 6, 8, 6, 7, 7, 7, 2, 7, 3, 7, 8, 3, 1, 7, 4, 9, 0, 2, 7, 1, 6,\n",
+      "        8, 3, 8, 2, 2, 7, 2, 0, 9, 3, 0, 9, 4, 9, 0, 4, 8, 4, 1, 8, 5, 1, 7, 3,\n",
+      "        2, 0, 0, 3, 1, 6, 5, 6, 0, 6, 8, 4, 1, 2, 0, 6, 0, 3, 7, 8, 4, 0, 1, 9,\n",
+      "        3, 4, 9, 6, 2, 8, 5, 7, 3, 9, 5, 8, 3, 8, 0, 1, 9, 5, 9, 7, 3, 9, 4, 1,\n",
+      "        2, 1, 4, 7, 2, 9, 8, 0, 9, 6, 7, 6, 8, 5, 8, 4, 3, 3, 9, 6, 3, 6, 3, 1,\n",
+      "        9, 1, 3, 0, 5, 4, 2, 7, 8, 3, 7, 0, 9, 4, 3, 7, 5, 2, 5, 3, 3, 3, 4, 0,\n",
+      "        2, 0, 2, 1, 3, 3, 8, 0, 5, 4, 6, 9, 6, 2, 5, 5]) 256\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, label in train_iter:\n",
+    "\n",
+    "    print(label, len(label))\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14672,7 +14704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -14683,19 +14715,31 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8865/1099339401.py:25: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  out = self.sm(out)\n",
+      "/home/fabrizio/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([256])) that is different to the input size (torch.Size([256, 256])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
      "ename": "RuntimeError",
-     "evalue": "The size of tensor a (10) must match the size of tensor b (256) at non-singleton dimension 1",
+     "evalue": "Expected hidden size (1, 64, 20), got [1, 256, 20]",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [62], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m learn_rate \u001b[39m=\u001b[39m \u001b[39m0.1\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39m#train(net, train_iter, test_iter, num_epochs, lr)\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m train(train_iter, learn_rate, hidden_dim\u001b[39m=\u001b[39;49mhidden_size, EPOCHS\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn [61], line 29\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(train_loader, learn_rate, hidden_dim, EPOCHS)\u001b[0m\n\u001b[1;32m     27\u001b[0m net\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     28\u001b[0m out, h \u001b[39m=\u001b[39m net(x\u001b[39m.\u001b[39mto(device)\u001b[39m.\u001b[39mfloat(), h)\n\u001b[0;32m---> 29\u001b[0m loss \u001b[39m=\u001b[39m criterion(out, label\u001b[39m.\u001b[39;49mto(device)\u001b[39m.\u001b[39;49mfloat())\n\u001b[1;32m     30\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     31\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
+      "Cell \u001b[0;32mIn [72], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m learn_rate \u001b[39m=\u001b[39m \u001b[39m0.1\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39m#train(net, train_iter, test_iter, num_epochs, lr)\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m train(train_iter, learn_rate, hidden_dim\u001b[39m=\u001b[39;49mhidden_size, EPOCHS\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn [64], line 28\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(train_loader, learn_rate, hidden_dim, EPOCHS)\u001b[0m\n\u001b[1;32m     26\u001b[0m h \u001b[39m=\u001b[39m h\u001b[39m.\u001b[39mdata\n\u001b[1;32m     27\u001b[0m net\u001b[39m.\u001b[39mzero_grad()\n\u001b[0;32m---> 28\u001b[0m out, h \u001b[39m=\u001b[39m net(x\u001b[39m.\u001b[39;49mto(device)\u001b[39m.\u001b[39;49mfloat(), h)\n\u001b[1;32m     29\u001b[0m loss \u001b[39m=\u001b[39m criterion(out, label\u001b[39m.\u001b[39mto(device)\u001b[39m.\u001b[39mfloat())\n\u001b[1;32m     30\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
       "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/module.py:1190\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1186\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1187\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1188\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1189\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1190\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1191\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/loss.py:536\u001b[0m, in \u001b[0;36mMSELoss.forward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    535\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 536\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mmse_loss(\u001b[39minput\u001b[39;49m, target, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
-      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/functional.py:3291\u001b[0m, in \u001b[0;36mmse_loss\u001b[0;34m(input, target, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   3288\u001b[0m \u001b[39mif\u001b[39;00m size_average \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m reduce \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   3289\u001b[0m     reduction \u001b[39m=\u001b[39m _Reduction\u001b[39m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3291\u001b[0m expanded_input, expanded_target \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mbroadcast_tensors(\u001b[39minput\u001b[39;49m, target)\n\u001b[1;32m   3292\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39m_C\u001b[39m.\u001b[39m_nn\u001b[39m.\u001b[39mmse_loss(expanded_input, expanded_target, _Reduction\u001b[39m.\u001b[39mget_enum(reduction))\n",
-      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/functional.py:74\u001b[0m, in \u001b[0;36mbroadcast_tensors\u001b[0;34m(*tensors)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function(tensors):\n\u001b[1;32m     73\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(broadcast_tensors, tensors, \u001b[39m*\u001b[39mtensors)\n\u001b[0;32m---> 74\u001b[0m \u001b[39mreturn\u001b[39;00m _VF\u001b[39m.\u001b[39;49mbroadcast_tensors(tensors)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (10) must match the size of tensor b (256) at non-singleton dimension 1"
+      "Cell \u001b[0;32mIn [71], line 21\u001b[0m, in \u001b[0;36mModel.forward\u001b[0;34m(self, x, h)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x, h):\n\u001b[0;32m---> 21\u001b[0m     out, h \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgru(x, h)\n\u001b[1;32m     23\u001b[0m     out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(out[:,\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]))\n\u001b[1;32m     25\u001b[0m     out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msm(out)\n",
+      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/module.py:1190\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1186\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1187\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1188\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1189\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1190\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1191\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/rnn.py:953\u001b[0m, in \u001b[0;36mGRU.forward\u001b[0;34m(self, input, hx)\u001b[0m\n\u001b[1;32m    948\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    949\u001b[0m     \u001b[39m# Each batch of the hidden state should match the input sequence that\u001b[39;00m\n\u001b[1;32m    950\u001b[0m     \u001b[39m# the user believes he/she is passing in.\u001b[39;00m\n\u001b[1;32m    951\u001b[0m     hx \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpermute_hidden(hx, sorted_indices)\n\u001b[0;32m--> 953\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck_forward_args(\u001b[39minput\u001b[39;49m, hx, batch_sizes)\n\u001b[1;32m    954\u001b[0m \u001b[39mif\u001b[39;00m batch_sizes \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    955\u001b[0m     result \u001b[39m=\u001b[39m _VF\u001b[39m.\u001b[39mgru(\u001b[39minput\u001b[39m, hx, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flat_weights, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_layers,\n\u001b[1;32m    956\u001b[0m                      \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtraining, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbidirectional, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbatch_first)\n",
+      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/rnn.py:237\u001b[0m, in \u001b[0;36mRNNBase.check_forward_args\u001b[0;34m(self, input, hidden, batch_sizes)\u001b[0m\n\u001b[1;32m    234\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcheck_input(\u001b[39minput\u001b[39m, batch_sizes)\n\u001b[1;32m    235\u001b[0m expected_hidden_size \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_expected_hidden_size(\u001b[39minput\u001b[39m, batch_sizes)\n\u001b[0;32m--> 237\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck_hidden_size(hidden, expected_hidden_size)\n",
+      "File \u001b[0;32m~/miniconda3/envs/deepl/lib/python3.9/site-packages/torch/nn/modules/rnn.py:231\u001b[0m, in \u001b[0;36mRNNBase.check_hidden_size\u001b[0;34m(self, hx, expected_hidden_size, msg)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcheck_hidden_size\u001b[39m(\u001b[39mself\u001b[39m, hx: Tensor, expected_hidden_size: Tuple[\u001b[39mint\u001b[39m, \u001b[39mint\u001b[39m, \u001b[39mint\u001b[39m],\n\u001b[1;32m    229\u001b[0m                       msg: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mExpected hidden size \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m, got \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    230\u001b[0m     \u001b[39mif\u001b[39;00m hx\u001b[39m.\u001b[39msize() \u001b[39m!=\u001b[39m expected_hidden_size:\n\u001b[0;32m--> 231\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(msg\u001b[39m.\u001b[39mformat(expected_hidden_size, \u001b[39mlist\u001b[39m(hx\u001b[39m.\u001b[39msize())))\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected hidden size (1, 64, 20), got [1, 256, 20]"
      ]
     }
    ],
